--- a/app/src/main/res/layout/activity_insert_new_password.xml
+++ b/app/src/main/res/layout/activity_insert_new_password.xml
@@ -20,34 +20,55 @@
         app:layout_constraintTop_toTopOf="parent">
 
 
-        <Button
-            android:id="@+id/ResetPassword_button_activityInsertNewPassword"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="150dp"
-            android:paddingStart="45dp"
-            android:paddingTop="10dp"
-            android:paddingEnd="45dp"
-            android:paddingBottom="10dp"
-            android:text="@string/btn_reset_password"
-            android:textSize="20dp" />
 
-        <TextView
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="200dp"
             android:layout_gravity="center"
-            android:text="@string/message_post_code" />
+            android:layout_marginTop="200dp"
+            android:paddingHorizontal="80dp"
+            android:orientation="vertical">
+
+
+            <RelativeLayout
+                android:id="@+id/ResetPassword_button_activityInsertNewPassword"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:clickable="true"
+                android:background="@drawable/background_buttongeneral_ripple">
+
+                <TextView
+                    android:id="@+id/textView11"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:textStyle="bold"
+                    android:textSize="20dp"
+                    android:textColor="@color/textColor"
+                    android:text="Siguiente" />
+            </RelativeLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_gravity="center"
+                android:text="Cambiar contraseña" />
+        </LinearLayout>
+
+
     </FrameLayout>
+
+
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="40dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="300dp"
+        android:layout_marginHorizontal="20dp"
+        android:paddingHorizontal="200dp"
+        android:layout_marginBottom="280dp"
         android:layout_gravity="center_horizontal"
         app:cardCornerRadius="21dp"
         app:cardElevation="20dp"
@@ -56,62 +77,74 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/style_appdata">
-            <ImageView
-                android:layout_width="@dimen/sizo_icon_user"
-                android:layout_height="@dimen/sizo_icon_user"
-                android:layout_gravity="center_horizontal"
-                android:src="@drawable/icon_user3_dark" />
 
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="140dp"
-                android:gravity="center"
-                android:fontFamily="sans-serif-medium"
-                android:text="Recuperar contraseña"
-                android:textSize="@dimen/text_title_size_sign_in" />
-
-            <com.google.android.material.textfield.TextInputLayout
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:layout_gravity="center"
-                android:hint="Ingresa nueva contraseña"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                app:boxCornerRadiusTopEnd="10dp"
-                app:boxCornerRadiusTopStart="10dp"
-                app:boxBackgroundMode="outline">
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/InputNewPassword_activityInsertNewPassword"
-                    android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="140dp"
+                    android:layout_height="140dp"
+                    android:layout_gravity="center_horizontal"
+                    android:background="@drawable/icon_insertnewpassword" />
+
+                <TextView
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="@dimen/text_size_input"
-                    android:inputType="textPassword"/>
-            </com.google.android.material.textfield.TextInputLayout>
+                    android:layout_gravity="center_horizontal"
+                    android:gravity="center"
+                    android:fontFamily="sans-serif-medium"
+                    android:text="Restablecer contraseña"
+                    android:textSize="@dimen/text_title_size_sign_in" />
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="100dp"
-                android:layout_gravity="center"
-                android:hint="Confirmar nueva contraseña"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                app:boxCornerRadiusTopEnd="10dp"
-                app:boxCornerRadiusTopStart="10dp"
-                app:boxBackgroundMode="outline"
-                app:endIconMode="password_toggle">
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/ConfirmNewPassword_activityInsertNewPassword"
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textSize="@dimen/text_size_input"
-                    android:inputType="textPassword"/>
-            </com.google.android.material.textfield.TextInputLayout>
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="@dimen/separation_of_ET_log_in"
+                    android:orientation="vertical">
 
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:hint="Ingresa nueva contraseña"
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                        app:boxCornerRadiusTopEnd="10dp"
+                        app:boxCornerRadiusTopStart="10dp"
+                        app:boxBackgroundMode="outline">
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/InputNewPassword_activityInsertNewPassword"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textSize="@dimen/text_size_input"
+                            android:inputType="textPassword"/>
+                    </com.google.android.material.textfield.TextInputLayout>
 
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:layout_gravity="center"
+                        android:hint="Confirmar nueva contraseña"
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                        app:boxCornerRadiusTopEnd="10dp"
+                        app:boxCornerRadiusTopStart="10dp"
+                        app:boxBackgroundMode="outline"
+                        app:endIconMode="password_toggle">
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/ConfirmNewPassword_activityInsertNewPassword"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textSize="@dimen/text_size_input"
+                            android:inputType="textPassword"/>
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                </LinearLayout>
+
+            </LinearLayout>
 
         </FrameLayout>
     </androidx.cardview.widget.CardView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
