--- a/app/src/main/res/drawable/background_button_withoutbackground_ripple.xml
+++ b/app/src/main/res/drawable/background_button_withoutbackground_ripple.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="@color/pressBtn">
+    android:color="@color/pressBtn_WithoutBg">
     <item android:id="@android:id/mask">
         <shape android:shape="rectangle">
             <solid android:color="@color/pressBtn"></solid>
             <corners android:radius="30dp"></corners>
         </shape>
     </item>
-    <item android:drawable="@drawable/background_buttongeneral"></item>
 </ripple>
