--- a/app/src/main/res/layout/activity_qa_main_menu.xml
+++ b/app/src/main/res/layout/activity_qa_main_menu.xml
@@ -28,22 +28,36 @@
 
             <TextView
                 android:id="@+id/textView5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:layout_gravity="center"
+                android:layout_marginStart="60dp"
                 android:gravity="center"
                 android:textStyle="bold"
+                android:textColor="@color/textColor_WithoutBg"
                 android:textSize="20dp"
-                android:text="Menu" />
+                android:text="Menú" />
 
-            <ImageButton
+            <RelativeLayout
                 android:id="@+id/imageButton_LogOut_ActivityQaMainMenu"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
+                android:layout_gravity="center"
+                android:layout_margin="10dp"
                 android:layout_weight="0"
-                android:src="@drawable/icon_logout" />
+                android:clickable="true"
+                android:background="?attr/selectableItemBackgroundBorderless">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:layout_centerInParent="true"
+                    android:src="@drawable/icon_logout" />
+            </RelativeLayout>
+
+
+
+
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
@@ -63,7 +77,11 @@
                 android:id="@+id/FullNameUser_TextView_activityQaMainMenu"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="TextView" />
+                android:textColor="@color/textColor_WithoutBg"
+                android:textSize="25dp"
+                android:layout_marginVertical="10dp"
+                android:textStyle="bold"
+                android:text="Hola," />
 
             <Switch
                 android:id="@+id/switch1"
@@ -106,6 +124,7 @@
                         android:fontFamily="sans-serif-condensed"
                         android:textSize="30dp"
                         android:text="PanikaSOS"
+                        android:textColor="@color/textColor_WithoutBg"
                         android:textStyle="bold"/>
                 </RelativeLayout>
 
@@ -116,26 +135,84 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
+                android:layout_marginTop="20dp"
                 android:orientation="horizontal">
 
-
-                <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/ToContacts_button_activityQaMainMenu"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:padding="10dp"
                     android:layout_weight="1"
-                    android:background="@drawable/background_buttonqamenu"
-                    style="@style/BackGround_colorButtonMenu"
-                    android:text="@string/option_contacts" />
+                    android:orientation="vertical">
 
-                <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/ToMap_button_activityqa_MainMenu"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="80dp"
+                        android:layout_gravity="center"
+                        android:background="@drawable/style_btnmainmenu_contact">
+
+                        <RelativeLayout
+                            android:id="@+id/ToContacts_button_activityQaMainMenu"
+                            android:layout_width="match_parent"
+                            android:layout_height="70dp"
+                            android:layout_gravity="center"
+                            android:clickable="true"
+                            android:background="@drawable/background_button_contact_ripple">
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_centerInParent="true"
+                                android:textStyle="bold"
+                                android:textSize="20dp"
+                                android:textColor="@color/textColor_WithoutBg"
+                                android:text="@string/option_contacts" />
+
+                        </RelativeLayout>
+                    </RelativeLayout>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:text="@string/option_map" />
+                    android:padding="10dp"
+                    android:orientation="vertical">
+
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="80dp"
+                        android:layout_gravity="center"
+                        android:background="@drawable/style_btnmainmenu_map">
+
+                        <RelativeLayout
+                            android:id="@+id/ToMap_button_activityqa_MainMenu"
+                            android:layout_width="match_parent"
+                            android:layout_height="70dp"
+                            android:layout_gravity="center"
+                            android:clickable="true"
+                            android:background="@drawable/background_button_map_ripple">
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_centerInParent="true"
+                                android:textStyle="bold"
+                                android:textSize="20dp"
+                                android:textColor="@color/textColor_WithoutBg"
+                                android:text="@string/option_map"  />
+
+                        </RelativeLayout>
+                    </RelativeLayout>
+
+                </LinearLayout>
+
+
 
             </LinearLayout>
+
 
 
         </LinearLayout>
