--- a/app/src/main/res/layout/activity_qa_map.xml
+++ b/app/src/main/res/layout/activity_qa_map.xml
@@ -24,20 +24,38 @@
             android:background="@drawable/style_toolbar"
             android:orientation="horizontal">
 
-            <ImageButton
+
+
+            <RelativeLayout
                 android:id="@+id/Menu_activityQaMap"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_margin="10dp"
                 android:layout_weight="0"
-                android:layout_marginStart="5dp"
-                android:src="@drawable/menu" />
+                android:clickable="true"
+                android:background="?attr/selectableItemBackgroundBorderless">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:layout_centerInParent="true"
+                    android:src="@drawable/menu" />
+            </RelativeLayout>
 
             <TextView
                 android:id="@+id/textView5"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:layout_gravity="center"
+                android:layout_marginEnd="60dp"
+                android:gravity="center"
+                android:textStyle="bold"
+                android:textColor="@color/textColor_WithoutBg"
+                android:textSize="20dp"
                 android:text="@string/option_map" />
+
+
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
@@ -46,7 +64,6 @@
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="80dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
