--- a/app/src/main/res/layout/activity_reset_password_code.xml
+++ b/app/src/main/res/layout/activity_reset_password_code.xml
@@ -28,22 +28,25 @@
                 android:id="@+id/textView6"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="OTP Verification"
+                android:text="Verificación OTP"
+                android:gravity="center"
                 android:textSize="30dp"
+                android:textColor="@color/textColor_WithoutBg"
                 android:textStyle="bold"/>
+            <ImageView
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_gravity="center_horizontal"
+                android:background="@drawable/icon_resetpassswordcode" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
                 android:textSize="20dp"
-                android:text="@string/message_post_code" />
+                android:gravity="center"
+                android:textColor="@color/textColor_WithoutBg"
+                android:text="Hemos enviado el código de verificación" />
 
-            <TextView
-                android:id="@+id/TextView_activityResetpasswordCode"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -55,67 +58,79 @@
                     android:id="@+id/editTextNumber_01_activityResetpasswordCode"
                     android:layout_width="40dp"
                     android:layout_height="45dp"
+                    android:layout_marginHorizontal="5dp"
                     android:gravity="center"
                     android:imeOptions="actionNext"
                     android:importantForAutofill="no"
                     android:maxLength="1"
                     android:textSize="25dp"
                     android:textStyle="bold"
+                    android:background="@drawable/background_cardnumber_code"
                     android:inputType="number" />
                 <EditText
                     android:id="@+id/editTextNumber_02_activityResetpasswordCode"
                     android:layout_width="40dp"
                     android:layout_height="45dp"
+                    android:layout_marginHorizontal="5dp"
                     android:gravity="center"
                     android:imeOptions="actionNext"
                     android:importantForAutofill="no"
                     android:maxLength="1"
                     android:textSize="25dp"
                     android:textStyle="bold"
+                    android:background="@drawable/background_cardnumber_code"
                     android:inputType="number"  />
                 <EditText
                     android:id="@+id/editTextNumber_03_activityResetpasswordCode"
                     android:layout_width="40dp"
                     android:layout_height="45dp"
+                    android:layout_marginHorizontal="5dp"
                     android:gravity="center"
                     android:imeOptions="actionNext"
                     android:importantForAutofill="no"
                     android:maxLength="1"
                     android:textSize="25dp"
                     android:textStyle="bold"
+                    android:background="@drawable/background_cardnumber_code"
                     android:inputType="number"  />
                 <EditText
                     android:id="@+id/editTextNumber_04_activityResetpasswordCode"
                     android:layout_width="40dp"
                     android:layout_height="45dp"
+                    android:layout_marginHorizontal="5dp"
                     android:gravity="center"
                     android:imeOptions="actionNext"
                     android:importantForAutofill="no"
                     android:maxLength="1"
                     android:textSize="25dp"
                     android:textStyle="bold"
+                    android:background="@drawable/background_cardnumber_code"
                     android:inputType="number"  />
                 <EditText
                     android:id="@+id/editTextNumber_05_activityResetpasswordCode"
                     android:layout_width="40dp"
                     android:layout_height="45dp"
+                    android:layout_marginHorizontal="5dp"
                     android:gravity="center"
                     android:imeOptions="actionNext"
                     android:importantForAutofill="no"
                     android:maxLength="1"
                     android:textSize="25dp"
                     android:textStyle="bold"
+                    android:background="@drawable/background_cardnumber_code"
                     android:inputType="number"  />
                 <EditText
                     android:id="@+id/editTextNumber_06_activityResetpasswordCode"
                     android:layout_width="40dp"
                     android:layout_height="45dp"
+                    android:layout_marginHorizontal="5dp"
                     android:gravity="center"
                     android:imeOptions="actionNext"
                     android:importantForAutofill="no"
                     android:maxLength="1"
                     android:textSize="25dp"
                     android:textStyle="bold"
+                    android:background="@drawable/background_cardnumber_code"
                     android:inputType="number"  />
             </LinearLayout>
 
@@ -123,37 +138,32 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:text="¿No recibiste el OTP?"
-                    android:textSize="20dp"/>
-
-                <TextView
-                    android:id="@+id/TextView_resendOTP_activityResetpasswordCode"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:text=" Reenviar"
-                    android:textColor="#FF0000"
-                    android:textStyle="bold"
-                    android:textSize="20dp"/>
-            </LinearLayout>
-            <Button
-                android:id="@+id/VerifyCode_button_activityResetpasswordCode"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
-                android:layout_gravity="center"
-                android:text="@string/verificar"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
+                android:layout_marginTop="20dp"
                 android:paddingStart="45dp"
                 android:paddingEnd="45dp"
-                android:textSize="20dp"/>
+                android:orientation="horizontal">
+                <RelativeLayout
+                    android:id="@+id/VerifyCode_button_activityResetpasswordCode"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center"
+                    android:clickable="true"
+                    android:background="@drawable/background_buttongeneral_ripple">
+
+                    <TextView
+                        android:id="@+id/textView11"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:textStyle="bold"
+                        android:textSize="20dp"
+                        android:textColor="@color/textColor"
+                        android:text="@string/verificar" />
+                </RelativeLayout>
+
+            </LinearLayout>
+
+
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
