--- a/app/src/main/res/layout/activity_sign_in_user.xml
+++ b/app/src/main/res/layout/activity_sign_in_user.xml
@@ -19,41 +19,65 @@
             app:layout_constraintTop_toTopOf="parent">
 
 
-                <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/SignIn_button_activitySign_in"
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    style="@style/button_style"
-                    android:layout_marginTop="200dp"
                     android:layout_gravity="center"
-                    android:paddingTop="10dp"
-                    android:paddingBottom="10dp"
-                    android:paddingStart="45dp"
-                    android:paddingEnd="45dp"
-                    android:textSize="@dimen/text_size_sign_in"
-                    android:textAllCaps="false"
-                    android:text="@string/btn_sign_in" />
+                    android:layout_marginTop="240dp"
+                    android:paddingHorizontal="70dp"
+                    android:orientation="vertical">
 
-                <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/Register_button_activitySign_in"
-                    style="@style/button_style_without_background"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="250dp"
-                    android:padding="10dp"
-                    android:layout_gravity="center"
-                    android:textAllCaps="false"
-                    android:textSize="@dimen/text_size_log_in"
-                    android:text="@string/btn_log_in" />
+                        <RelativeLayout
+                            android:id="@+id/SignIn_button_activitySign_in"
+                            android:layout_width="match_parent"
+                            android:layout_height="50dp"
+                            android:layout_gravity="center"
+                            android:clickable="true"
+                            android:background="@drawable/background_buttongeneral_ripple">
+
+                                <TextView
+                                    android:id="@+id/textView11"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_centerInParent="true"
+                                    android:textStyle="bold"
+                                    android:textSize="20dp"
+                                    android:textColor="@color/textColor"
+                                    android:text="@string/btn_sign_in" />
+                        </RelativeLayout>
+
+
+                        <RelativeLayout
+                            android:id="@+id/Register_button_activitySign_in"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_gravity="center"
+                            android:layout_marginTop="5dp"
+                            android:paddingVertical="10dp"
+                            android:paddingHorizontal="15dp"
+                            android:clickable="true"
+                            android:background="@drawable/background_button_withoutbackground_ripple">
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_centerInParent="true"
+                                    android:textStyle="bold"
+                                    android:textSize="17dp"
+                                    android:textColor="@color/textColor_WithoutBg"
+                                    android:text="@string/btn_log_in" />
+                        </RelativeLayout>
+                </LinearLayout>
+
         </FrameLayout>
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="40dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginBottom="300dp"
+            android:layout_marginHorizontal="20dp"
+            android:paddingHorizontal="200dp"
+            android:layout_marginBottom="280dp"
             android:layout_gravity="center_horizontal"
             app:cardCornerRadius="21dp"
             app:cardElevation="20dp"
@@ -63,69 +87,92 @@
                     android:layout_height="match_parent"
                     android:background="@drawable/style_appdata">
 
-                        <ImageView
-                            android:layout_width="@dimen/sizo_icon_user"
-                            android:layout_height="@dimen/sizo_icon_user"
-                            android:layout_gravity="center_horizontal"
-                            android:src="@drawable/icon_user3_dark" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_horizontal"
-                            android:layout_marginTop="140dp"
-                            android:gravity="center"
-                            android:fontFamily="sans-serif-medium"
-                            android:text="Iniciar sesión"
-                            android:textSize="@dimen/text_title_size_sign_in" />
-
-                        <com.google.android.material.textfield.TextInputLayout
+                        <LinearLayout
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="20dp"
-                            android:layout_gravity="center"
-                            android:hint="Ingresa tu número"
-                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                            app:boxCornerRadiusTopEnd="10dp"
-                            app:boxCornerRadiusTopStart="10dp"
-                            app:boxBackgroundMode="outline">
-                                <com.google.android.material.textfield.TextInputEditText
-                                    android:id="@+id/InputPhoneNumber_activitySign_in"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:textSize="@dimen/text_size_input"
-                                    android:inputType="phone"/>
-                        </com.google.android.material.textfield.TextInputLayout>
+                            android:layout_height="match_parent"
+                            android:orientation="vertical">
 
-                        <com.google.android.material.textfield.TextInputLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="100dp"
-                            android:layout_gravity="center"
-                            android:hint="@string/input_text_password"
-                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                            app:boxCornerRadiusTopEnd="10dp"
-                            app:boxCornerRadiusTopStart="10dp"
-                            app:boxBackgroundMode="outline"
-                            app:endIconMode="password_toggle">
-                                <com.google.android.material.textfield.TextInputEditText
-                                    android:id="@+id/InputPassword_activitySign_in"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:textSize="@dimen/text_size_input"
-                                    android:inputType="textPassword"/>
-                        </com.google.android.material.textfield.TextInputLayout>
+                                <ImageView
+                                    android:layout_width="140dp"
+                                    android:layout_height="140dp"
+                                    android:layout_gravity="center_horizontal"
+                                    android:background="@drawable/icon_signin" />
 
-                        <androidx.appcompat.widget.AppCompatButton
-                            android:id="@+id/ForgotPassword_button_activitySign_in"
-                            style="@style/button_style_without_background"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:layout_marginTop="165dp"
-                            android:padding="10dp"
-                            android:text="¿Olvidaste tu contraseña?"
-                            android:textAllCaps="false" />
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="center_horizontal"
+                                    android:gravity="center"
+                                    android:fontFamily="sans-serif-medium"
+                                    android:text="Iniciar sesión"
+                                    android:textSize="@dimen/text_title_size_sign_in" />
+
+                                <LinearLayout
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:layout_marginTop="@dimen/separation_of_ET_log_in"
+                                    android:orientation="vertical">
+
+                                        <com.google.android.material.textfield.TextInputLayout
+                                            android:layout_width="match_parent"
+                                            android:layout_height="wrap_content" android:layout_gravity="center"
+                                            android:hint="Ingresa tu número"
+                                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                                            app:boxCornerRadiusTopEnd="10dp"
+                                            app:boxCornerRadiusTopStart="10dp"
+                                            app:boxBackgroundMode="outline">
+                                                <com.google.android.material.textfield.TextInputEditText
+                                                    android:id="@+id/InputPhoneNumber_activitySign_in"
+                                                    android:layout_width="match_parent"
+                                                    android:layout_height="wrap_content"
+                                                    android:textSize="@dimen/text_size_input"
+                                                    android:inputType="phone"/>
+                                        </com.google.android.material.textfield.TextInputLayout>
+
+                                        <com.google.android.material.textfield.TextInputLayout
+                                            android:layout_width="match_parent"
+                                            android:layout_height="wrap_content"
+                                            android:layout_marginTop="@dimen/separation_of_ET_log_in"
+                                            android:layout_gravity="center"
+                                            android:hint="@string/input_text_password"
+                                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                                            app:boxCornerRadiusTopEnd="10dp"
+                                            app:boxCornerRadiusTopStart="10dp"
+                                            app:boxBackgroundMode="outline"
+                                            app:endIconMode="password_toggle">
+                                                <com.google.android.material.textfield.TextInputEditText
+                                                    android:id="@+id/InputPassword_activitySign_in"
+                                                    android:layout_width="match_parent"
+                                                    android:layout_height="wrap_content"
+                                                    android:textSize="@dimen/text_size_input"
+                                                    android:inputType="textPassword"/>
+                                        </com.google.android.material.textfield.TextInputLayout>
+
+
+                                        <RelativeLayout
+                                            android:id="@+id/ForgotPassword_button_activitySign_in"
+                                            android:layout_width="wrap_content"
+                                            android:layout_height="wrap_content"
+                                            android:layout_gravity="center"
+                                            android:layout_marginTop="@dimen/separation_of_ET_log_in"
+                                            android:paddingVertical="10dp"
+                                            android:paddingHorizontal="15dp"
+                                            android:clickable="true"
+                                            android:background="@drawable/background_button_withoutbackground_ripple">
+
+                                                <TextView
+                                                    android:layout_width="wrap_content"
+                                                    android:layout_height="wrap_content"
+                                                    android:layout_centerInParent="true"
+                                                    android:textStyle="bold"
+                                                    android:textSize="17dp"
+                                                    android:textColor="@color/textColor_WithoutBg"
+                                                    android:text="¿Olvidaste tu contraseña?" />
+                                        </RelativeLayout>
+
+                                </LinearLayout>
+
+                        </LinearLayout>
 
                 </FrameLayout>
         </androidx.cardview.widget.CardView>
