--- a/app/src/main/res/layout/custom_dialog_loading.xml
+++ b/app/src/main/res/layout/custom_dialog_loading.xml
@@ -27,6 +27,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="30dp"
+            android:textColor="@color/textColor_WithoutBg"
+            android:textStyle="italic"
             android:text="Cargando..." />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
